...

            <ExpandableListView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/loglistview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/linearLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                android:choiceMode="singleChoice"
...
        android:alpha="0.8"
        android:id="@+id/linearLayout"
        android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageButton
            android:id="@+id/SortButton"
            style="@android:style/Widget.DeviceDefault.ActionButton.Overflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:src="@drawable/ic_sort_button" />

        <ImageButton
            android:id="@+id/FilterButton"
            style="@android:style/Widget.DeviceDefault.ActionButton.Overflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/GroupButton"
            android:src="@drawable/ic_filter_button" />

        <ImageButton
            android:id="@+id/DeleteButton"
            style="@android:style/Widget.DeviceDefault.ActionButton.Overflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/FilterButton"
            android:src="@drawable/ic_delete_button" />
...
