...
    <string name="drawer_settings">Settings</string>
    <string name="drawer_profile_manager">Profiles</string>
    <string name="drawer_app_info">About</string>
	<string name="drawer_statistics">Statistics</string>
	<string name="drawer_help">Help videos</string>

    <string name="button_title_apply">Apply</string>
    <string name="button_title_cancel">Cancel</string>
    <string name="shared_preference_path">de.tudarmstadt.informatik.hostage.preferences</string>
    <string name="UUID">9fc4f490-659e-11e3-949a-0800200c9a66</string>

    <string name="recorded_attacks">recorded attacks: </string>
    <string name="current_connection">Current connection</string>
...
    <string name="device_rooted">Device rooted</string>
    <string name="porthack_installed">Portbinder installed</string>
	<string name="iptables_available">Iptables available</string>
	<string name="install_porthack">Install Portbinder</string>
	<string name="uninstall_porthack">Uninstall Portbinder</string>
	<string name="porthack_explanation"><![CDATA[<h1>Portbinder</h1><p>To use protocols with ports below 1024 your device requires root privileges. HosTaGe does not run with root privileges by default. That is why a small program called Portbinder is needed that opens a socket and passes it to the main HosTaGe App.</p><p>Another technique is to redirect those ports to higher port numbers. This is ach
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="no_data_notification">No Attacks have been recorded. Please check your filter option.</string>
    <string name="no_data_notification_no_filter">No Attacks have been recorded.</string>

    <string name="TODAY">Today</string>
...
